# alfred-workflow-c-

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/modules/: FindCompilerFlags.cmake
src/: CMakeLists.txt  local_project.cpp  local_project.hpp  main.cpp  project.cpp  project.hpp  remote_project.cpp  remote_project.hpp
test/: CMakeLists.txt  project_test.cpp
